src/objects/Plan__c.object
<CustomObject>
    <description>MG_Plan</description>
    <fields>
        <fullName>BHI_Price__c</fullName>
        <description>This field is used to determine if the price field should be updated with the BHI price. -- IF the Price in the current load file is different from the value currently in the BHI Price Field then the automated load will update the Price AND the BHI Price field. If the value is the same as the BHI price field the Price field will not be updated.</description>
        <inlineHelpText>Price provided by the automated load</inlineHelpText>
        <label>BHI Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BHI_Square_Footage__c</fullName>
        <label>BHI Square Footage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Price_Max__c</fullName>
        <label>Base Price (Max)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price (Min)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Plan_Key__c</fullName>
        <description>Only used for SQL Server to keep static references to rows of Projects</description>
        <label>DB Plan Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Display_in_Zonda_From_Project__c</fullName>
        <formula>Project__r.Display_in_Zonda__c</formula>
        <inlineHelpText>Reflects the Display in Zonda flag from the Plan&apos;s Project</inlineHelpText>
        <label>Display in Zonda (From Project)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_in_Zonda__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elevator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finished_Basement_SF__c</fullName>
        <label>Finished Basement SF</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Floor_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Floor Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Floor_Secondary_Bed_Bath__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Floor Secondary Bed/Bath</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Floor_Secondary_Bed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Floor Secondary Bed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Garage__c</fullName>
        <label>Garage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hidden_from_ZIC_site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden from ZIC site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_Audit__c</fullName>
        <inlineHelpText>The Historical Meyers Audit Information</inlineHelpText>
        <label>Historical Audit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Update_User_Price__c</fullName>
        <label>Last Update User (Price)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Price__c</fullName>
        <label>Last Updated Date (Price)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Price__c</fullName>
        <label>Max Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Min_Price__c</fullName>
        <label>Min Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NexGen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NexGen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_of_Baths__c</fullName>
        <label># of Baths</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Beds__c</fullName>
        <label># of Beds</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Dens__c</fullName>
        <label># of Dens</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Floors__c</fullName>
        <label># of Floors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Full_Baths__c</fullName>
        <label># of Full Baths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Half_Baths__c</fullName>
        <label># of Half Baths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Lofts__c</fullName>
        <label># of Lofts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Off-Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Images_Count__c</fullName>
        <inlineHelpText>Plan Images Count</inlineHelpText>
        <label>Plan Images Count</label>
        <summaryForeignKey>Plan_Image__c.Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plan_Notes__c</fullName>
        <label>Plan Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Unchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Unchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Side_by_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Side by Side (Garage)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spec_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spec/Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Square_Footage_Max__c</fullName>
        <label>Square Footage (Max)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Footage_Min__c</fullName>
        <label>Square Footage (Min)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tandem_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tandem (Garage)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_SF__c</fullName>
        <inlineHelpText>Total SF is populated only when basement square footage is available. Manually entered field that captures Square Footage + Finished or Unfinished Basement square footage</inlineHelpText>
        <label>Total SF</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unfinished_Basement_SF__c</fullName>
        <label>Unfinished Basement SF</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>